tests/backend/checkmach/fail5.output
File "fail5.ml", line 2, characters 5-15:
Error: Annotation check for zero_alloc failed on function camlFail5__test_HIDE_STAMP
